# weston-ivi-shell

./: CMakeLists.txt  Makefile.am  configure.ac
ivi-input-calibration/: CMakeLists.txt  README
ivi-input-calibration/include/: calibration-input-calibration.h  calibration-input-configuration.h  calibration-subdivision-button.h  calibration-subdivision-slider.h  calibration-subdivision-touch.h  calibration-subdivision.h  calibration-util.h
ivi-input-calibration/src/: calibration-input-calibration.c  calibration-input-configuration.c  calibration-subdivision-button.c  calibration-subdivision-slider.c  calibration-subdivision-touch.c  calibration-subdivision.c  calibration-util.c  ivi-input-calibration.c
ivi-shell/: ivi-layout.c
src/: compositor-drm.c  compositor-gal2d.c
